--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
 [submodule "src/python-stl"]
-	path = src/python_stl
+	path = src/pytelo
 	url = git@github.com:jusevitch-mitll/python-stl.git
 [submodule "src/catl"]
 	path = src/catl
